[package]
name = "crosshair-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.0"
egui = "0.27.0"
winapi = { version = "0.3.9", features = ["winuser"] }
tray-item = "0.10.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[build-dependencies]
embed-resource = "2.0"


[workspace]
include = ["assets/**"]